# openrecipes

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html.tera  recipe.html.tera
